src/objects/TRAK_BurnDown2__c.object
<CustomObject>
    <description>Business Description: This captures sprint progress and is used for the creation of burndown charts as part of Agile reporting

Used In: Release Tracker App</description>
    <fields>
        <fullName>Actual_burndown__c</fullName>
        <label>Actual Burndown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_velocity__c</fullName>
        <label>Current Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optimum_burndown__c</fullName>
        <description>Populated by the Burndown class called by pressing the &quot;Create Burndown&quot; button on sprint</description>
        <label>Optimum Burndown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Complete__c</fullName>
        <label>Points Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_burndown__c</fullName>
        <label>Projected Burndown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint_In_Progress__c</fullName>
        <description>Returns TRUE if the sprint status is in progress, otherwise returns FALSE. Used in filters to show current burndown stats</description>
        <formula>IF(ISPICKVAL(Sprint__r.Status__c , &quot;In Progress&quot;),&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint In Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>TRAK_Sprint__c</referenceTo>
        <relationshipLabel>Burndown Stats</relationshipLabel>
        <relationshipName>TRAK_Burndown_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <label>Burndown Stat</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Sprint__c</columns>
        <columns>Date__c</columns>
        <columns>Points_Complete__c</columns>
        <columns>Optimum_burndown__c</columns>
        <columns>Actual_burndown__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Sprint__c</columns>
        <columns>Date__c</columns>
        <columns>Points_Complete__c</columns>
        <columns>Optimum_burndown__c</columns>
        <columns>Actual_burndown__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint_In_Progress__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>Sprints In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sprint_1_Burndowns</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Optimum_burndown__c</columns>
        <columns>Actual_burndown__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sprint 1 Burndowns</label>
    </listViews>
    <nameField>
        <label>BS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Burndown Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>